# RDS-sanitized-snapshots

./: .gitignore  LICENSE  Pipfile  README.md  architecture.xml  cfm.py  gen-cfm.py  iam.py  pyproject.toml
.github/workflows/: publish.yml
lambda/: rds.py
