[tool.poetry]
name = "rds-sanitized-snapshots"
version = "1.0.1"
description = "Take periodic snapshots of RDS databases, sanitize them, and share with other accounts. Useful for QA/dev databases."
authors = ["Amir Szekely <amir@cloudsnorkel.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
boto3 = "^1.21.42"
click = "^8.1.2"
troposphere = "^4.0.1"
python-minifier = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
